src/main/java/com/example/solid/dip/negative/ReadKeyboard.java
package com.example.solid.dip.negative;

/**
 * Created by sbiliaiev on 10/02/2019.
 */
public class ReadKeyboard {

    private char[] readData = {'n', 'e', 'g', 'a', 't', 'i', 'v', 'e'};

    public char[] getReadData() {
        return readData;
    }
}
